fixed issue with top panel overlay covering entire app.  Only covers top panel now when in tutorial mode

--- a/css/main.css
+++ b/css/main.css
@@ -714,7 +714,9 @@ select {
   width: 1px; }
 
 .top-panel-wrapper {
-  width: 640px; }
+  width: 640px;
+  position: relative;
+  height: 103px; }
 
 .top-panel-section {
   -moz-user-select: -moz-none;
@@ -954,6 +956,7 @@ select {
   -ms-user-select: none;
   user-select: none;
   display: none;
+  background: rgba(0, 0, 0, 0.4) none repeat scroll 0 0;
   height: 100%;
   position: absolute;
   z-index: 20000; }
@@ -967,7 +970,8 @@ select {
 .top-panel-overlay {
   width: 100%;
   height: 100%;
-  left: 0; }
+  left: 0;
+  position: absolute; }
 
 .piano-overlay {
   width: 100%;
