--- a/sass/_top-panel.scss
+++ b/sass/_top-panel.scss
@@ -1,5 +1,7 @@
 .top-panel-wrapper {
     width: 640px;
+    position:relative;
+    height:103px;
 }
 
 .top-panel-section {
