--- a/sass/_tutorial.scss
+++ b/sass/_tutorial.scss
@@ -42,7 +42,7 @@
     -ms-user-select: none;
     user-select: none;
     display: none;
-    // background: rgba(0, 0, 0, 0.1) none repeat scroll 0 0;
+     background: rgba(0, 0, 0, 0.4) none repeat scroll 0 0;
     height: 100%;
     position: absolute;
     // top: 0;
@@ -64,6 +64,7 @@
     width: 100%;
     height: 100%;
     left: 0;
+    position:absolute;
 }
 
 .piano-overlay {
